Simplify code by using `toList` collector introduced in Java 16