@@ -26,7 +26,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -108,7 +107,7 @@ public final class MultiThreadedEventProcessor implements CoordinatorEventProces
             new EventProcessorThread(
                 threadPrefix + threadId
             )
-        ).collect(Collectors.toList());
+        ).toList();
         this.threads.forEach(EventProcessorThread::start);
     }
 
