@@ -47,7 +47,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.common.acl.AclOperation.READ;
 import static org.apache.kafka.common.acl.AclOperation.WRITE;
@@ -166,7 +165,7 @@ public class ClusterMetadataAuthorizerTest {
     );
 
     static final List<AclBindingFilter> TEST_FILTERS = TEST_BINDINGS.stream().
-        map(AclBinding::toFilter).collect(Collectors.toList());
+        map(AclBinding::toFilter).toList();
 
     @Test
     public void testCreateAcls() throws Exception {
