@@ -20,7 +20,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Csv {
@@ -51,7 +50,7 @@ public class Csv {
         if (csvList == null || csvList.isEmpty()) {
             return Collections.emptyList();
         } else {
-            return Stream.of(csvList.split("\\s*,\\s*")).filter(v -> !v.isEmpty()).collect(Collectors.toList());
+            return Stream.of(csvList.split("\\s*,\\s*")).filter(v -> !v.isEmpty()).toList();
         }
     }
 }
