@@ -31,7 +31,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * The default implementation of the {@link Persister} interface which is used by the
@@ -147,7 +146,7 @@ public class DefaultStatePersister implements Persister {
                                     partitionResult.partition(),
                                     partitionResult.errorCode(),
                                     partitionResult.errorMessage()))
-                                .collect(Collectors.toList());
+                                .toList();
                         } catch (Exception e) {
                             log.error("Unexpected exception while writing data to share coordinator", e);
                             return Collections.singletonList(PartitionFactory.newPartitionErrorData(
@@ -158,10 +157,10 @@ public class DefaultStatePersister implements Persister {
                         }
                     })
                     .flatMap(List::stream)
-                    .collect(Collectors.toList());
+                    .toList();
                 return new TopicData<>(topicId, partitionErrData);
             })
-            .collect(Collectors.toList());
+            .toList();
         return new WriteShareGroupStateResult.Builder()
             .setTopicsData(topicsData)
             .build();
@@ -244,9 +243,9 @@ public class DefaultStatePersister implements Persister {
                                     partitionResult.startOffset(),
                                     partitionResult.errorCode(),
                                     partitionResult.errorMessage(),
-                                    partitionResult.stateBatches().stream().map(PersisterStateBatch::from).collect(Collectors.toList())
+                                    partitionResult.stateBatches().stream().map(PersisterStateBatch::from).toList()
                                 ))
-                                .collect(Collectors.toList());
+                                .toList();
                         } catch (Exception e) {
                             log.error("Unexpected exception while getting data from share coordinator", e);
                             return Collections.singletonList(PartitionFactory.newPartitionAllData(
@@ -260,10 +259,10 @@ public class DefaultStatePersister implements Persister {
                         }
                     })
                     .flatMap(List::stream)
-                    .collect(Collectors.toList());
+                    .toList();
                 return new TopicData<>(topicId, partitionAllData);
             })
-            .collect(Collectors.toList());
+            .toList();
         return new ReadShareGroupStateResult.Builder()
             .setTopicsData(topicsData)
             .build();
