@@ -43,7 +43,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import scala.collection.Seq;
 import scala.jdk.javaapi.CollectionConverters;
@@ -159,6 +158,6 @@ public abstract class TieredStorageTestHarness extends IntegrationTestHarness {
         return CollectionConverters.asJava(brokers).stream()
                 .map(b -> new BrokerLocalStorage(b.config().brokerId(), CollectionConverters.asJava(b.config().logDirs().toSet()),
                         STORAGE_WAIT_TIMEOUT_SEC))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
