@@ -31,7 +31,6 @@ import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 
 import static org.apache.kafka.server.log.remote.storage.LocalTieredStorageCondition.expectEvent;
 import static org.apache.kafka.server.log.remote.storage.LocalTieredStorageEvent.EventType.DELETE_SEGMENT;
@@ -64,7 +63,7 @@ public final class DeleteRecordsAction implements TieredStorageTestAction {
                         spec.getTopicPartition(),
                         false,
                         spec.getEventCount()))
-                .collect(Collectors.toList());
+                .toList();
 
         Map<TopicPartition, RecordsToDelete> recordsToDeleteMap =
                 Collections.singletonMap(partition, RecordsToDelete.beforeOffset(beforeOffset));
