@@ -56,7 +56,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import static java.time.Duration.ofMillis;
 import static org.apache.kafka.streams.integration.utils.IntegrationTestUtils.waitForEmptyConsumerGroup;
@@ -211,7 +210,7 @@ public abstract class AbstractResetIntegrationTest {
 
         final List<String> internalTopics = cluster.getAllTopicsInCluster().stream()
                 .filter(StreamsResetter::matchesInternalTopicFormat)
-                .collect(Collectors.toList());
+                .toList();
         cleanGlobal(false,
                 "--internal-topics",
                 String.join(",", internalTopics.subList(1, internalTopics.size())),
